alteracoes do cursor

--- a/env.example
+++ b/env.example
@@ -1,4 +1,9 @@
 # Configurações do Banco de Dados PostgreSQL (Produção)
+
+# Opção 1 - Usando DATABASE_URL (Recomendado)
+DATABASE_URL=postgresql://username:password@localhost:5432/feriados_db
+
+# Opção 2 - Usando variáveis separadas
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
@@ -10,4 +15,5 @@ NODE_ENV=production
 
 # Porta do servidor
 PORT=3333
+
 
